<?xml version="1.0"?>
<package format="2">
  <name>ros2zeromq</name>
  <version>0.0.0</version>
  <description>The ros2zeromq package</description>
  <maintainer email="eeshaojie@ust.hk">Shaojie Shen</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>roscpp</buildtool_depend>
  <build_depend>traj_utils</build_depend>
  <buildtool_depend>rospy</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>traj_utils</exec_depend>
  <exec_depend>rospy</exec_depend>
  <export></export>
</package>
